# Cantonese

./: .gitignore  README.md  cantonese.csv  flashcard.py  flashcard_qa.py  pyproject.toml
resources/flashcard/: cantonese.csv
resources/qa/: cantonese-QA.csv
scripts/: generate_tts.py
src/: __init__.py  card_logic.py  data_manager.py  flashcard_app.py  ui_widgets.py
src/common/: card_logic.py  data_manager.py  ui_widgets.py
src/flashcards/: __init__.py  flashcard_app.py
src/qa/: card_logic_qa.py  data_manager_qa.py  flashcard_app_qa.py
